--- a/Requirements.txt
+++ b/Requirements.txt
@@ -5,5 +5,6 @@ transformers
 sentence-transformers
 requests
 pandas
+torch
 https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp38-cp38-linux_x86_64.
 https://download.pytorch.org/whl/cpu/torchvision-0.13.1%2Bcpu-cp38-cp38-linux_x86_64.whl
